# rusted-ca

./: ARCHETECTURE.MD  ARCHETECTURE2.MD  Cargo.toml  ERRORTYPE.MD  README.MD  build.rs  docker-compose.yml
idea/: 20250717.MD  API_KEY.yml  LOGS.yml  Neo4j.yml  TODO.MD  User_Admin.MD  bibouroku.MD  future_idea.MD  future_task.MD  interesting_api_ideas.md  polyglot-persistence.MD  secure_api_key.MD
idea/redis/: redis_single_service.MD  structure.MD
logs/: 20250712_hour_0_Error_log.jsonl  20250712_hour_0_logs.jsonl  20250712_hour_10_logs.jsonl  20250712_hour_3_Error_log.jsonl  20250712_hour_3_logs.jsonl  20250712_hour_6_Error_log.jsonl  20250712_hour_6_logs.jsonl  20250712_hour_9_Error_log.jsonl
migrations/: 20250712151846_remove_table.sql  20250714022718_add_role_and_status_to_user.sql
proto/: hello.proto
src/: lib.rs  main.rs
src/application/commands/: create_user_command.rs  delete_user_command.rs  update_user_command.rs
src/application/decorators/: metrics_decorator.rs
src/application/dto/: user_command_dto.rs  user_request_dto.rs  user_response_dto.rs
src/application/queries/: get_user_query.rs  list_users_query.rs  search_users_query.rs
src/application/usecases/: create_user_sqlx_usecase.rs  create_user_usecase.rs  delete_user_sqlx_usecase.rs  delete_user_usecase.rs  get_user_usecase.rs  list_users_usecase.rs  login_usecase.rs  mod.rs  update_user_sqlx_usecase.rs  update_user_usecase.rs
src/domain/entity/: user.rs
src/domain/entity_sqlx/: user_sqlx.rs
src/domain/repository/: user_command_repository.rs  user_query_repository.rs
src/domain/service/: id_generator.rs  user_domain_service.rs
src/domain/value_object/: birth_date.rs  email.rs  mod.rs  pagination.rs  password.rs  phone.rs  user_id.rs  user_name.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: cache_metrics.rs  lru_cache.rs
src/infrastructure/config/: app_config.rs  metrics_config.rs
src/infrastructure/cqrs/: command_store.rs  query_store.rs  synchronizer.rs
src/infrastructure/database/: sqlite_connection.rs
src/infrastructure/di/: container.rs  mod.rs
src/infrastructure/grpc/: hello_service.rs  server.rs
src/infrastructure/repository/: in_memory_user_command_repository.rs  in_memory_user_query_repository.rs  mod.rs  monitored_repository.rs  redis_user_sqlx_repository.rs  sync_user_sqlx_repository.rs  tidb_user_sqlx_repository.rs
src/infrastructure/utils/: cors_settings.rs  graceful_shutdown.rs
src/infrastructure/web/: api_router.rs  mod.rs  run.rs
src/presentation/controller/: auth_controller.rs  fortune_controller.rs  health_controller.rs  metrics_controller.rs  user_controller.rs
src/presentation/dto/: api_response.rs  create_user_request.rs  delete_user_request.rs  fortune_response.rs  login_request.rs  login_response.rs  metrics_response.rs  mod.rs  update_user_request.rs  user_create_request_sqlx.rs  user_deleted_response.rs  user_response.rs  user_response_sqlx.rs
src/presentation/router/: app_router.rs  (+6 more)
src/shared/: mod.rs
src/state/: app_state.rs
tests/: auth_integration_test.rs  logs_integration_test.rs  user_integration_test.rs  user_validation_test.rs
(+19 files in other folders)
