[package]
name = "rusted-ca"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9.2"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
async-trait = "0.1"
rusqlite = { version = "0.30", features = ["bundled"] }
hyper = { version = "0.14", features = ["server"] }
hyper-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
hyper = "0.14"

[features]
testmode = []
